# DemoAIBaufest

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py
frontend/: README.md  index.html  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/pages/: LoginPage.module.css  LoginPage.tsx  WelcomePage.module.css  WelcomePage.tsx
